tests/toy/neg/000830_mutation.toylang
program a = { a = while a + a; } .
